source/_sass/base.scss
/* ... */
.header {
  background-color: $accent-color;
  color: $bg-color;

  > nav {
    overflow-x: auto;
    @extend %width-limited-container;

    > ul {
      margin-top: 0;
      margin-bottom: 0;
      padding-left: 0;
      list-style: none;
      white-space: nowrap;

      > li {
        display: block;
        float: left;

        > a {
          @extend %sans-serif;

          display: block;
          height: 1.272em;
          padding: 0.618em 1rem;
          line-height: 1.272em;
        }
      }

      &::after {
        display: block;
        content: '';
        clear: left;
      }
    }
  }

  a:link, a:visited {
    border-color: $bg-color;
    color: $bg-color;

    &.hover-like,
    &:hover {
      background-color: $bg-color;
      color: $accent-color;
    }
  }

  a:link:hover {
    border-style: none;
  }
}

.footer {
  margin-top: 1.618em;
  border-top: 0.0625em dashed $ui-color;

  > p {
    @extend %width-limited-container;

    box-sizing: border-box;
    margin-top: 0.618em;
    padding: 0 1rem;
  }
}

main {
  // margin: 0 0.618em;
  @extend %width-limited-container;
}

%width-limited-container {
  margin-left: auto;
  margin-right: auto;
  max-width: 1333px;
  @media not screen and (min-width: 1333px) {
    max-width: 1000px;
  }
}

body {
  > section,
  > nav {
    @extend %width-limited-container;
  }
}

main,
.side-column,
.main-column {
  > section,
  > aside, > nav,
  > nav.tags,
  > header,
  > h1, > h2, > h3, > h4, > h5, > h6, > hr,
  > ul, > ol, > dl,
  > p, > blockquote, > .blockquote-like,
  > .footnotes {
    margin-left: 1rem;
    margin-right: 1rem;
  }
}

.main-column {
  padding-top: 0.0625em;
}

@media screen and (min-width: 1333px) {
  .flexible-wrapper {
    display: flex;
    flex-direction: row-reverse;
  }

  .side-column {
    flex-shrink: 0;
    flex-basis: 333px;
    position: sticky;
    top: 0;
    height: -moz-fit-content;
    height:      fit-content;
    max-height: 100vh;
    overflow-y: auto;

    // NOTE: Google Chrome 46+ を除き、 fill, fit-content, max-content, min-content が height 値としてサポートされていない。
    display: table;
    width: 333px;
  }

  .main-column {
    flex-basis: 1000px;
    flex-grow: 1;
  }
}

@media not screen and (min-width: 1333px) {

  // NOTE: `:has` が十分にサポートされるまでのその場凌ぎ
  .side-column > nav:last-child {
    margin-bottom: 2.618em;
  }

  .side-column:not(:has(nav)) {
    margin-bottom: 2.618em;
  }
}

aside {
  margin: 0.618em 0 1em;

}

/* aside */.note {
  border: 0.0625em dashed $ui-color;
  padding: 0.382em 0.618em 0.382em 4.854em;

  &::before {
    @extend %sans-serif;

    content: 'NOTE';
    float: left;
    margin-left: -4.236em;
    font-size: 1rem;
  }
}

/* nav */.post-meta {
  margin: 0.618em 0 1em;

  > dl {
    > dt {
      display: none;
    }

    > dd {
      margin-left: 0;
    }
  }
}

.post-date {
  &::before {
    display: inline;
    content: '📆';
  }
}

/* section */.post-summary {
  margin-top: 2.618em;

  .tags {
    > h3 {
      display: none;
    }
  }
}

/* ul */.post-list {
  display: table;
  padding-left: 0;
  border-spacing: 0.618em 0;
  margin-left: -0.618em;
  margin-right: -0.618em;

  > li {
    display: table-row-group;

    > dl {
      display: table-row;

      > dt {
        display: none;
      }

      > dd {
        display: table-cell;
        margin-left: 0;

        &:nth-of-type(1) {
          word-break: keep-all;
        }
      }
    }
  }
}

%sans-serif {
  font-family: $font-emph;
  &:lang(ja) {
    font-family: $font-emph-ja;
  }
}

/* nav */.pagination-nav {
  @extend %sans-serif;

  text-align: center;

  > ul {
    display: inline-block;
    margin-top: 0;
    margin-bottom: 0;
    padding-left: 0;
    list-style-type: none;

    > li {
      display: inline-block;
    }
  }
}


/* nav */.recent-posts {
  margin: 0 1em;
}

//
//   _|
// _|_|_|_|    _|_|_|    _|_|_|
//   _|      _|    _|  _|    _|
//   _|      _|    _|  _|    _|
//     _|_|    _|_|_|    _|_|_|
//                           _|
//                       _|_|

.tags {
  @extend %sans-serif;

  margin: -0.382em;
  padding: 0.382em;

  h3 {
    margin-right: -0.382rem;
  }

  ul {
    display: flex;
    flex-wrap: wrap;
    margin-top: 0;
    margin-right: -0.382em;
    margin-bottom: -0.382em !important; // prior to ul:last-child
    padding-left: 0;
    list-style: none;

    li {
      display: block;
      margin: 0 0.382em 0.382em 0;
    }
  }

  .side-column > & {
    padding-left: 0;
    padding-right: 0;
  }
}

.tag {
  display: inline-block;
  box-sizing: border-box;
  border: 0.0625em solid $ui-color;
  border-radius: 0.146em;
  padding: 0 0.382em;

  .tag-size {
    font-size: 75%;
  }
}

a.tag:link {
  border-color: $ui-color;
}

a.tag:visited {
  border-color: $ui-color;
}

a.tag:link:hover {
  background-color: $accent-mesh-color;
}

//
// _|                                  _|  _|
// _|_|_|      _|_|      _|_|_|    _|_|_|      _|_|_|      _|_|_|
// _|    _|  _|_|_|_|  _|    _|  _|    _|  _|  _|    _|  _|    _|
// _|    _|  _|        _|    _|  _|    _|  _|  _|    _|  _|    _|
// _|    _|    _|_|_|    _|_|_|    _|_|_|  _|  _|    _|    _|_|_|
//                                                             _|
//                                                         _|_|

h1, h2, h3, h4, h5, h6 {
  margin-top: 1em;
  margin-bottom: 0.618em;

  padding-top: 0.618em;
}

h1 { font-size: 182.4%; }
h2 { font-size: 161.8%; }
h3 { font-size: 143.4%; }
h4 { font-size: 127.2%; }
h5 { font-size: 112.7%; }
h6 { font-size: 100.0%; }

%strong {
  font-family: $font-emph;
  &:lang(ja) {
    font-family: $font-emph-ja;
  }

  font-weight: 500;
}

h1, h2, h3, h4, h5, h6 {
  @extend %strong;
}

hr {
  margin: 1.618em 0 1em;
  border: none;
}

// header-anchor

.header-anchor {
  opacity: 0;
  &:focus {
    opacity: 1;
  }

  font-size: 1rem;
  vertical-align: middle;
}

h1, h2, h3, h4, h5, h6 {
  &:target .header-anchor,
  &:hover .header-anchor {
    opacity: 1;
  }
}
/* ... */

